styles/style-portfolio.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');

* {
    margin: 0px;
    padding: 0px;
}

body {
    background-color: #000000;
    color: #FFFFFF;
    box-sizing: border-box;
}

.apresentacao {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 8% 15%;
    width: 75%;
}

.apresentacao__conteudo {
    width: 615px;
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.apresentacao__conteudo__titulo {
    font-family: 'Krona One', sans-serif;
    font-size: 36px;
    font-weight: 400;
    font-style: normal;
}

.apresentacao__conteudo__texto {
    font-family: 'Montserrat', sans-serif;
    font-size: 24px;
    font-weight: 400;
    font-style: normal;
}

.apresentacao__conteudo__botoes {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    gap: 32px;
}

.apresentacao__conteudo__botoes__subtitulo {
    font-family: 'Krona One', sans-serif;
    font-weight: 400;
    font-size: 24px;
    font-style: normal;
}

.apresentacao__conteudo__botoes__botao {
    display: flex;
    justify-content: center;
    gap: 16px;
    color: #FFFFFF;
    text-decoration: none;
    width: 380px;
    text-align: center;
    border: 2.5px double #22D4FD;
    padding: 21.5px 0;
    border-radius: 16px;
    font-family: 'Montserrat', sans-serif;
    font-size: 24px;
    font-weight: 600;
}

.apresentacao__conteudo__botoes__botao:hover {
    background-color: #272727;
    padding: 30px 15px;
}

.titulo-destaque {
    color: #22D4FD;
}

.rodape {
    color: #000000;
    background-color: #22D4FD;
    padding: 24px;
    text-align: center;
    font-size: 24px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}

